[gd_scene load_steps=5 format=3 uid="uid://dykiuya7cseo4"]

[ext_resource type="Theme" uid="uid://dd2gdeigo2urf" path="res://src/resources/main_theme.tres" id="1_3rlg5"]
[ext_resource type="Texture2D" uid="uid://btlct4cfbq4it" path="res://assets/sprites/lvl.png" id="1_f808q"]
[ext_resource type="Texture2D" uid="uid://be1qibpp2s0cf" path="res://assets/sprites/lvl-locked.png" id="2_x40vi"]
[ext_resource type="Script" path="res://src/ui/Levels/level_button.gd" id="3_7uxa1"]

[node name="Button" type="TextureButton"]
texture_filter = 1
offset_right = 64.0
offset_bottom = 64.0
pivot_offset = Vector2(64, 64)
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource("1_f808q")
texture_disabled = ExtResource("2_x40vi")
script = ExtResource("3_7uxa1")

[node name="Label" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.686275)
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3rlg5")
theme_override_colors/font_outline_color = Color(0.222656, 0.203125, 0.339844, 1)
theme_override_constants/outline_size = 16
theme_override_font_sizes/font_size = 64
text = "15"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_exited" from="." to="." method="_on_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
